objects/RIC_Amb_Code_Client_ELITE__c.object
<CustomObject>
    <fields>
        <fullName>RIC_Amb_Adresse_client_Source_ELITE__c</fullName>
        <label>Adresse client Source ELITE</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Cible_client_typo_Source_ELITE__c</fullName>
        <label>Cible client typologie Source ELITE</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low Energy Bar-Iconique</fullName>
                </value>
                <value>
                    <fullName>Low Energy Bar-Leader</fullName>
                </value>
                <value>
                    <fullName>Low Energy Bar-Premium</fullName>
                </value>
                <value>
                    <fullName>Low Energy Bar-Standard</fullName>
                </value>
                <value>
                    <fullName>Restaurant-Iconique</fullName>
                </value>
                <value>
                    <fullName>Restaurant-Leader</fullName>
                </value>
                <value>
                    <fullName>Restaurant-Premium</fullName>
                </value>
                <value>
                    <fullName>Restaurant-Standard</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar-Iconique</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar-Leader</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar-Premium</fullName>
                </value>
                <value>
                    <fullName>High Energy Bar-Standard</fullName>
                </value>
                <value>
                    <fullName>Night Club-Iconique</fullName>
                </value>
                <value>
                    <fullName>Night Club-Leader</fullName>
                </value>
                <value>
                    <fullName>Night Club-Premium</fullName>
                </value>
                <value>
                    <fullName>Night Club-Standard</fullName>
                </value>
                <value>
                    <fullName>Caviste-Leader</fullName>
                </value>
                <value>
                    <fullName>Caviste-Premium</fullName>
                </value>
                <value>
                    <fullName>Caviste-Standard</fullName>
                </value>
                <value>
                    <fullName>BtB</fullName>
                </value>
                <value>
                    <fullName>Institutionnels</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Grossiste</fullName>
                </value>
                <value>
                    <fullName>GD</fullName>
                </value>
                <value>
                    <fullName>Proxi HDO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RIC_Amb_Client_Info_1_Source_ELITE__c</fullName>
        <label>Client Info 1 Source ELITE</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Client_Info_2_Source_ELITE__c</fullName>
        <label>Client Info 2 Source ELITE</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Code_Postal_Source_ELITE__c</fullName>
        <label>Code Postal Source ELITE</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Email_Source_ELITE__c</fullName>
        <label>Email Source ELITE</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_External_ID_Code_Client_ELITE__c</fullName>
        <externalId>true</externalId>
        <label>External ID Code Client ELITE</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RIC_Amb_Secteur_CDS_Source_ELITE__c</fullName>
        <label>Secteur CDS Source ELITE</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Telephone_Source_ELITE__c</fullName>
        <label>Téléphone Source ELITE</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Type_d_appro_Source_ELITE__c</fullName>
        <label>Type d&apos;appro Source ELITE</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIC_Amb_Ville_Source_ELITE__c</fullName>
        <label>Ville Source ELITE</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Code Client ELITE</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RIC_Amb_Secteur_CDS_Source_ELITE__c</columns>
        <columns>RIC_Amb_Adresse_client_Source_ELITE__c</columns>
        <columns>RIC_Amb_Ville_Source_ELITE__c</columns>
        <columns>RIC_Amb_Code_Postal_Source_ELITE__c</columns>
        <columns>RIC_Amb_Telephone_Source_ELITE__c</columns>
        <columns>RIC_Amb_Email_Source_ELITE__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Code Client Ricard Source ELITE</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Code Clients ELITE</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>